--- a/index.css
+++ b/index.css
@@ -6,3 +6,20 @@
 .active{
  color: red;
 }
+
+
+#loading{
+ position: absolute;
+ text-align: center;
+ top: 50%;
+ left: 50%;
+ width: 100px;
+ height: 100px;
+ transform: translate(-50%, -50%);
+}
+
+#spin{
+ height: 50px;
+ width: 50px;
+ font-size: 1rem;
+}
