--- a/index.css
+++ b/index.css
@@ -8,7 +8,24 @@
 }
 
 
-#loading{
+#loader{
+ 
+}
+
+#spin{
+ height: 50px;
+ width: 50px;
+ font-size: 1rem;
+}
+
+.loader {
+  width: 45px;
+  aspect-ratio: 1;
+  --c:no-repeat linear-gradient(#000 0 0);
+  background: var(--c), var(--c), var(--c);
+  animation: 
+    l18-1 1s infinite,
+    l18-2 1s infinite;
  position: absolute;
  text-align: center;
  top: 50%;
@@ -17,9 +34,11 @@
  height: 100px;
  transform: translate(-50%, -50%);
 }
-
-#spin{
- height: 50px;
- width: 50px;
- font-size: 1rem;
+@keyframes l18-1 {
+ 0%,100% {background-size:20% 100%}
+ 33%,66% {background-size:20% 20%}
+}
+@keyframes l18-2 {
+ 0%,33%   {background-position: 0    0,50% 50%,100% 100%}
+ 66%,100% {background-position: 100% 0,50% 50%,0    100%}
 }
