--- a/index.css
+++ b/index.css
@@ -2,5 +2,15 @@
 
 *{
  font-family: Arial, Helvetica, sans-serif;
- transition: background-color 1s ease
+ transition: background-color .3s ease
+}
+
+#logo,#sidebarprof{
+ width: 50px;
+ height: 50px;
+ margin: 0px;
+}
+
+#sidebar{
+ transition: all .3s ease
 }
